--- a/exercise_2.ipynb
+++ b/exercise_2.ipynb
@@ -2,20 +2,46 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "50599115-33f7-4503-9ef0-6b5acb38b94f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.5714285714285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercise 2\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "y_pred = [0, 1, 0, 1, 0, 1, 0]\n",
+    "y_true = [0, 0, 1, 1, 1, 1, 0]\n",
+    "\n",
+    "accuracy = accuracy_score(y_true, y_pred)\n",
+    "print(\"Accuracy:\", accuracy)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
