--- a/exercise_4.ipynb
+++ b/exercise_4.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "0c4e23b2-711e-493f-8cbf-aeabe8d1cf43",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,11 @@
       "Accuracy on the test set:  0.9736842105263158\n",
       "Recall on the test set:  0.9866666666666667\n",
       "Precision on the test set :  0.9736842105263158\n",
-      "ROC_AUC on the test set:  0.9863247863247864\n"
+      "ROC_AUC on the test set:  0.9863247863247864\n",
+      "\n",
+      "matrix\n",
+      " [[37  2]\n",
+      " [ 1 74]]\n"
      ]
     }
    ],
@@ -97,7 +101,11 @@
     "print(\"Accuracy on the test set: \", acc_test)\n",
     "print(\"Recall on the test set: \", recall_test)\n",
     "print(\"Precision on the test set : \", precision_test)\n",
-    "print(\"ROC_AUC on the test set: \", roc_auc_test)"
+    "print(\"ROC_AUC on the test set: \", roc_auc_test)\n",
+    "\n",
+    "\n",
+    "cm = confusion_matrix(y_test, y_test_pred)\n",
+    "print(\"\\nmatrix\\n\", cm)"
    ]
   },
   {
